--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+/*
+    Capstone Provisio Project
+    Green Team
+    04/14/2022
+*/
+
 #user-profile {
     margin-left: auto;
     padding: 20px;
